# Traffic-Analysis-Base-DPDK

./: README.md
.github/workflows/: checkmarx-one.yml  codeql.yml  pull_request.yml  snyk-security.yml  sonarcloud.yml
Backend/: globalConf.py  manage.py  readme.md  requirements.txt
Backend/StateGridTraffic/: asgi.py  settings.py  urls.py  wsgi.py
Backend/classify/: models.py  urls.py  views.py
Backend/classify/config/: conf.json
Backend/classify/dpdk_anomaly_flow_detector/: dpdk_anomaly_flow_detector_bin-6e921a5a
Backend/classify/utils/: RNN.py  classic_pred.py  classic_pred_from_mysql.py  classic_train.py  lstmNet_pred.py  lstmNet_pred_mysql.py  lstmNet_train.py  pcapFeatureExtract.py  split_A3C_pcaps.py  united_pred.py  united_pred_mysql.py
Backend/csv/: readme.md
Backend/detect/: models.py  persona.py  qqwry.ipdb  urls.py  views.py
Backend/detect/utils/: getClassInfo.py
Backend/packet_dissect/: apps.py  async_sharkd.py  models.py  sharkd.py  sharkd_views.py  views.py
Backend/pcaps/: readme.md
Backend/traffic_collect/: apps.py  mapl_skt.py  mapl_skt_original.py  server.py  urls.py  views.py
Backend/user/: urls.py  views.py
Backend_Dpdk_Collect/: .gitignore  meson.build  package.json
Backend_Dpdk_Collect/csv/: README.md
Backend_Dpdk_Collect/src/: core_capture.c  core_capture.h  core_write.c  core_write.h  dpdkcap.c  flow_extractor.c  flow_extractor.h  generate_query.c  generate_query.h  mysql_op.c  mysql_op.h  statistics.c  statistics.h  statistics_ncurses.c
Backend_Dpdk_Collect/test/: flow-extraction.py  test_pthread  test_pthread.c
Backend_Dpdk_Collect/test/test_hash/: fast_hash.c  fast_hash.h  fnv32.c  fnv32.h  ipsx.c  ipsx.h  lookup3.c  lookup3.h  meson.build  murmur_hash.c  murmur_hash.h  one_at_a_time.c  one_at_a_time.h  read_pcap.c  read_pcap.h  super_fast_hash.c  super_fast_hash.h  test_hash.c  xor32.c  xor32.h  xxhash32.c  xxhash32.h
Backend_Dpdk_Collect/test/test_mysql/: meson.build
Backend_Dpdk_Collect/test/test_mysql/src/: generate_query.c  generate_query.h  test_mysql.c  test_mysql.h
Frontend/: README.md  package-lock.json  package.json  vue.config.js
Frontend/.github/workflows/: build.yml
Frontend/public/: index.html  landingPage.html
Frontend/src/: App.vue  main.js
Frontend/src/components/: BgCover.vue  Navigator.vue
Frontend/src/router/: index.js
Frontend_Packet_Detail/: .gitattributes  package-lock.json  package.json  packet_main.html  vite.config.js
Frontend_Packet_Detail/src/: App.vue  main.js
(+47 files in other folders)
